// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commons tests Stats - with children 1`] = `
Array [
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 1,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "ComponentWithChildren",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
]
`;

exports[`Commons tests Stats - with children 2`] = `
Array [
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 1,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 1,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 2,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "SimpleComponent",
    "nthChild": 3,
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "ComponentWithChildren",
      "nthChild": 2,
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "ComponentWithChildren",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
]
`;

exports[`Commons tests Stats - without children 1`] = `
Array [
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "TestClass",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/others/class.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "ClassComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/class-components.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": Object {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": Object {
          "dataTestId": null,
          "name": "recursiveFunction",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": null,
    "name": "EmptyWithUseEffectAndUseCallback",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": "test-id-2",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
]
`;

exports[`Commons tests Stats - without children 2`] = `
Object {
  "calls": Array [
    Object {
      "args": undefined,
      "stats": Object {},
    },
  ],
  "dataTestId": null,
  "name": "TestClass",
  "numberOfCalls": 1,
  "parent": null,
  "relativePath": "/src/__integration-tests__/others/class.ts",
}
`;

exports[`Commons tests Stats - without children 3`] = `
Object {
  "calls": Array [
    Object {
      "args": undefined,
      "stats": Object {},
    },
  ],
  "dataTestId": "test-id-1",
  "name": "WithDeps",
  "numberOfCalls": 1,
  "parent": null,
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;
